--- a/testD.html
+++ b/testD.html
@@ -332,7 +332,7 @@ function plotmap(threshold){
         j: cj,
         k: ck,
         color: 'lightblue',
-        hoverinfo: '170cm Tall',
+        hoverinfo:'skip',
         type: 'mesh3d',
     };
     
