--- a/testD.html
+++ b/testD.html
@@ -351,7 +351,7 @@ function plotmap(threshold){
         j: cj,
         k: ck,
         color: 'lightgray',
-        hoverinfo:'skip',
+        //hoverinfo:'skip',
         type: 'mesh3d',
     };
 
